@startuml Staff/Trainer Module Class Diagram
' Title
title Staff/Trainer Module Class Diagram

' ENUMS
enum Shift {
  MORNING
  EVENING
}

enum AppointmentStatus {
  PENDING
  ACCEPTED
  REJECTED
}

enum SlotStatus {
  AVAILABLE
  BOOKED
  IN_PROGRESS
}

' CLASS: Staff (for trainers and others)
class Staff {
  +Long id
  +String name
  +String role
  +String phone
  +String email
  +Shift shift
}

' CLASS: Trainee (from external module)
class Trainee {
  +Long id
  +String name
  +String email
}

' CLASS: Appointment
class Appointment {
  +Long id
  +LocalDate date
  +Shift shift
  +LocalTime timeSlot
  +AppointmentStatus status
  --
  +Long trainerId
  +String trainerName
  +Long traineeId
  +String traineeName
}

' CLASS: TimeSlot
class TimeSlot {
  +Long id
  +LocalDate date
  +LocalTime time
  +SlotStatus status
  --
  +Long trainerId
}

' RELATIONSHIPS
Staff "1" --> "*" Appointment : books/accepts
Trainee "1" --> "*" Appointment : requests
Staff "1" --> "*" TimeSlot : owns

@enduml
